--- a/templates/outstanding_receipt.html
+++ b/templates/outstanding_receipt.html
@@ -133,7 +133,7 @@
     </div>
 
     <div class="footer">
-        Please settle your balance by {{ (datetime.now() + timedelta(days=14)).strftime('%d/%m/%Y') }}<br>
+        Please settle your balance by {{ due_date }}<br>
         For inquiries: accounts@examplehigh.edu | Phone: +254 700 123456
     </div>
 </body>
