--- a/templates/outstanding_receipt.html
+++ b/templates/outstanding_receipt.html
@@ -115,7 +115,7 @@
             <img src="data:image/png;base64,{{ logo_base64 }}" class="logo" alt="School Logo">
             {% endif %}
             <div class="title">OUTSTANDING BALANCE NOTICE</div>
-            <div class="subtitle">Example High School</div>
+            <div class="subtitle">ST PAUL RONGO DAY SECONDARY SCHOOL</div>
         </div>
 
         <div class="details">
@@ -168,8 +168,8 @@
         </div>
 
         <div class="footer">
-            Please settle your balance by {{ due_date }}<br>
-            For inquiries: accounts@examplehigh.edu | Phone: +254 700 123456
+            This is to remind you to please settle your balance by {{ due_date }}<br>
+            For inquiries:stpaulrongodayrr@gmail.com | Phone: +254 700 123456
         </div>
     </div>
 
