--- a/templates/receipt.html
+++ b/templates/receipt.html
@@ -111,8 +111,8 @@
         {% if logo_base64 %}
         <img src="data:image/png;base64,{{ logo_base64 }}" class="receipt-logo" alt="School Logo">
         {% endif %}
-        <div class="receipt-title">SCHOOL FEES PAYMENT RECEIPT</div>
-        <div class="receipt-subtitle">Example High School</div>
+        <div class="receipt-title">ST PAUL RONGO DAY SECONDARY SCHOOL</div>
+        <div class="receipt-subtitle">SCHOOL FEES PAYMENT RECEIPT</div>
     </div>
     
     <!-- Details -->
