--- a/templates/outstanding_receipt.html
+++ b/templates/outstanding_receipt.html
@@ -114,8 +114,8 @@
             {% if logo_base64 %}
             <img src="data:image/png;base64,{{ logo_base64 }}" class="logo" alt="School Logo">
             {% endif %}
-            <div class="title">OUTSTANDING BALANCE NOTICE</div>
-            <div class="subtitle">ST PAUL RONGO DAY SECONDARY SCHOOL</div>
+            <div class="title">ST PAUL RONGO DAY SECONDARY SCHOOL</div>
+            <div class="subtitle">OUT STANDING FEE BALANCE NOTICE</div>
         </div>
 
         <div class="details">
