--- a/templates/receipt.html
+++ b/templates/receipt.html
@@ -171,7 +171,7 @@
     
     <!-- Footer -->
     <div class="receipt-footer">
-        This is an official computer-generated receipt from Example High School<br>
+        This is an official computer-generated receipt from ST PAUL RONGO<br>
         {{ current_time.split(' ')[0] }} | Thank you for your payment
     </div>
 </div>
