--- a/templates/payments.html
+++ b/templates/payments.html
@@ -132,28 +132,35 @@
             </table>
         </div>
         
-        {% if payments %}
+        {# Safe pagination handling #}
+        {% if payments and pagination is defined %}
         <nav aria-label="Page navigation">
             <ul class="pagination justify-content-center mt-4">
                 {% if pagination.has_prev %}
                 <li class="page-item">
-                    <a class="page-link" href="{{ url_for('view_payments', page=pagination.prev_num, search=request.args.get('search')) }}">
+                    <a class="page-link" href="{{ url_for('view_payments', page=pagination.prev_num, search=request.args.get('search', '')) }}">
                         &laquo; Previous
                     </a>
                 </li>
                 {% endif %}
                 
                 {% for page_num in pagination.iter_pages() %}
-                <li class="page-item {% if page_num == pagination.page %}active{% endif %}">
-                    <a class="page-link" href="{{ url_for('view_payments', page=page_num, search=request.args.get('search')) }}">
-                        {{ page_num }}
-                    </a>
-                </li>
+                    {% if page_num %}
+                        <li class="page-item {% if page_num == pagination.page %}active{% endif %}">
+                            <a class="page-link" href="{{ url_for('view_payments', page=page_num, search=request.args.get('search', '')) }}">
+                                {{ page_num }}
+                            </a>
+                        </li>
+                    {% else %}
+                        <li class="page-item disabled">
+                            <span class="page-link">...</span>
+                        </li>
+                    {% endif %}
                 {% endfor %}
                 
                 {% if pagination.has_next %}
                 <li class="page-item">
-                    <a class="page-link" href="{{ url_for('view_payments', page=pagination.next_num, search=request.args.get('search')) }}">
+                    <a class="page-link" href="{{ url_for('view_payments', page=pagination.next_num, search=request.args.get('search', '')) }}">
                         Next &raquo;
                     </a>
                 </li>
